# ChangeLog for app-crypt/gpgme
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-crypt/gpgme/ChangeLog,v 1.171 2009/12/27 17:10:30 armin76 Exp $

  27 Dec 2009; Raúl Porcel <armin76@gentoo.org> gpgme-1.1.8-r1.ebuild,
  gpgme-1.2.0.ebuild:
  Add ~arm

  12 Dec 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  gpgme-1.2.0.ebuild, metadata.xml:
  Add "common-lisp" USE flag.

  31 Aug 2009; Brent Baude <ranger@gentoo.org> gpgme-1.2.0.ebuild:
  stable ppc64, bug 278625

  29 Aug 2009; nixnut <nixnut@gentoo.org> gpgme-1.2.0.ebuild:
  ppc stable #278625

  26 Aug 2009; Tobias Klausmann <klausman@gentoo.org> gpgme-1.2.0.ebuild:
  Stable on alpha, bug #278625

  05 Aug 2009; <chainsaw@gentoo.org> gpgme-1.2.0.ebuild:
  Marked stable on AMD64 as requested by Arfrever Frehtes Taifersar Arahesis
  <arfrever@gentoo.org> in bug #278625. Compile-tested on a Core2 Duo with
  USE="-pth".

  03 Aug 2009; Jeroen Roovers <jer@gentoo.org> gpgme-1.2.0.ebuild:
  Stable for HPPA (bug #278625).

*gpgme-1.2.0 (22 Jun 2009)

  22 Jun 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -gpgme-1.1.6.ebuild, -files/gpgme-1.1.6-cvs.patch, +gpgme-1.2.0.ebuild,
  +files/gpgme-1.2.0-fix_implicit_declaration.patch:
  Version bump (bug #275000).

  07 May 2009; Raúl Porcel <armin76@gentoo.org> gpgme-1.1.8-r1.ebuild:
  ia64/sparc stable wrt #267578

  03 May 2009; Tobias Klausmann <klausman@gentoo.org> gpgme-1.1.8-r1.ebuild:
  Stable on alpha, bug #267578

  30 Apr 2009; Jeroen Roovers <jer@gentoo.org> gpgme-1.1.8-r1.ebuild:
  Stable for HPPA (bug #267578).

  29 Apr 2009; Brent Baude <ranger@gentoo.org> gpgme-1.1.8-r1.ebuild:
  stable ppc64, bug 267578

  29 Apr 2009; Daniel Black <dragonheart@gentoo.org> -files/gpgme3.m4.patch,
  -gpgme-0.3.14-r2.ebuild:
  purge gpgme-0.3.14 as per bug #226461

  27 Apr 2009; Markus Meier <maekke@gentoo.org> gpgme-1.1.8-r1.ebuild:
  amd64/x86 stable, bug #267578
