@@ -2,7 +2,9 @@ AUX gpgme-1.1.8-et_EE.patch 356 RMD160 6ea6ff37a428ececc30e2535793a56540f3c4219 
 AUX gpgme-1.2.0-fix_implicit_declaration.patch 818 RMD160 5eb1c2d156637f77a2b92fe929b3953c45d49771 SHA1 f93592b037517148548dd46b504f95eb9c49d2e0 SHA256 a2ef1f6e8e78e89b2f7446c82d89b6c01d83c8635b75420c8d77c88ba3b075ac
 DIST gpgme-1.1.8.tar.gz 1085576 RMD160 6ee8856956cc8082fd19da457456b84d21d94841 SHA1 5f119d57009f1b8682d7665ae985325d0885ec9b SHA256 a7f276a6d21b9fef471a3c734d8be5a04ba8364a4d239e437aa137ce18b0afd8
 DIST gpgme-1.2.0.tar.gz 1114846 RMD160 2df4e19418c2859c4b427a58d8ce653a7303d79d SHA1 21ac8faf6cd47162940d576cf1b9a8c245e8424e SHA256 b57e48e71ca507ef7ec1acc2370e007dee36a60ac26699102f35a4312c121f77
+DIST gpgme-1.3.0.tar.bz2 869470 RMD160 9699ba5cb991459e41af46112914cac221a9b69d SHA1 0db69082abfbbbaf86c3ab0906f5137de900da73 SHA256 74e040fcd46061f6b0d8b621a2a2a48100a7ba5c9f69e7cf207259a6e2e3e6a1
 EBUILD gpgme-1.1.8-r1.ebuild 1067 RMD160 2c6658724771754a8b96b55495f6690d3105d8f8 SHA1 334c5e59468819d6b05ddc7037251bf8b689ff63 SHA256 c4bf516d0496f6e0f33d7f5365e828fffe63a75a2675fe5fa27adb203b2eec19
 EBUILD gpgme-1.2.0.ebuild 1201 RMD160 a6c875635e8a85dfed3520729f020f8ef2230ffa SHA1 c3c3b1adc4da5efeebc451dc41dd958f260db2e5 SHA256 06e918c1f1a6346c2ef91ecd4e7e9b2f70851988dfcf5972afc84ead8578b94d
-MISC ChangeLog 24478 RMD160 729fbc400f468b99b79fe6e7334aa6693e5a05ab SHA1 5ef243fd424de1ef8934f152ad9891a14632ef3e SHA256 36a9e0a808b80740303b2158d3446a8e6a81248135faf6f8f4ddd5676c5c6d06
+EBUILD gpgme-1.3.0.ebuild 1178 RMD160 1dfd176729772dcf9b0e1e817c5224349dddf0d7 SHA1 17ec15b35a64cd18dc8aeca85b274892afa72e79 SHA256 aa1726328fd78fa3551331efa0b10ee4b33add2d6f9a1fa4a55b38a54e618120
+MISC ChangeLog 24620 RMD160 4a6c30c5e44ae33e158b798624fb322b7f2f85b5 SHA1 669bfdcf90fa92ada70a2b6bd769b1aa2a02bfa2 SHA256 f190e29ef6e167e71c3ef324160b30b2622ebb5df8e4ca51220a89ed0ba99a2d
 MISC metadata.xml 481 RMD160 4d2fa83581185d3e39130832cf4027598b5a6486 SHA1 3ddf6d522cbba3a6c86815d3dce1d1dbfb2df201 SHA256 48032fe71d068f408a7d8781d37f03e0f45bde2fb2939945b4f1825b6feee07e
