@@ -1,6 +1,12 @@
 # ChangeLog for app-crypt/gpgme
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-crypt/gpgme/ChangeLog,v 1.171 2009/12/27 17:10:30 armin76 Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-crypt/gpgme/ChangeLog,v 1.172 2010/01/11 19:18:50 arfrever Exp $
+
+*gpgme-1.3.0 (11 Jan 2010)
+
+  11 Jan 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
+  +gpgme-1.3.0.ebuild:
+  Version bump.
 
   27 Dec 2009; Raúl Porcel <armin76@gentoo.org> gpgme-1.1.8-r1.ebuild,
   gpgme-1.2.0.ebuild:
